--- a/css/disco.css
+++ b/css/disco.css
@@ -134,7 +134,7 @@ body {
     font-weight: bold;
     position: absolute;
     top: 10px;
-    right: 15px;
+    right: 25px; /* Move the button further right */
     cursor: pointer;
     transition: color 0.3s ease;
     background: none; /* Remove any background */
@@ -146,6 +146,7 @@ body {
 .close-btn:hover {
     color: white; /* Change to white on hover */
 }
+
 
 /* Song List Styling */
 .song-modal h3 {
