--- a/css/disco.css
+++ b/css/disco.css
@@ -8,7 +8,7 @@ body {
 
 /* Discography Section */
 .discography {
-    padding: 100px 20px;
+    padding: 10px 20px;
     text-align: center;
 }
 
@@ -208,4 +208,23 @@ body {
 }
 body {
     transition: background-color 0.2s ease; /* Smooth transition for the background color */
+}
+.merch-blurb {
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 0; /* Remove any margin */
+    padding: 10; /* Remove any padding */
+    position: relative; /* Adjust positioning if needed */
+}
+
+/* For the video element */
+.merch-blurb video {
+    width: 120%; /* Adjusts width of video */
+    height: auto;
+    object-fit: cover; /* Ensures the video covers the area */
+    border-radius: 5px;
+    clip-path: inset(0px 0px 10% 0px); /* Crops bottom slightly */
+    display: block;
 }
