--- a/css/disco.css
+++ b/css/disco.css
@@ -215,16 +215,17 @@ body {
     display: flex;
     justify-content: center;
     margin: 0; /* Remove any margin */
-    padding: 10; /* Remove any padding */
+    padding: 20; /* Remove any padding */
     position: relative; /* Adjust positioning if needed */
+    overflow: hidden;
 }
 
 /* For the video element */
 .merch-blurb video {
-    width: 120%; /* Adjusts width of video */
+    width: 100%; /* Adjusts width of video */
     height: auto;
     object-fit: cover; /* Ensures the video covers the area */
     border-radius: 5px;
-    clip-path: inset(0px 0px 10% 0px); /* Crops bottom slightly */
+    clip-path: inset(10px 0px 30% 0px); /* Crops bottom slightly */
     display: block;
 }
