--- a/css/profiles.css
+++ b/css/profiles.css
@@ -94,3 +94,39 @@ footer {
     text-align: center;
     font-family: Arial, sans-serif;
 }
+
+
+/* Accessiblity */
+.high-contrast {
+    background-color: #000 !important; /* Pure black background */
+    color: #0fffeb !important;           /* Pure white text */
+    filter: none !important;          /* Ensure no other filters interfere */
+}
+
+.high-contrast div.text{
+    background-color: white;
+}
+
+.high-contrast div.images{
+    background-color: white;
+}
+
+.text-size-4 div.text {
+    height: 100%;
+    min-height: 680px;
+}
+
+.text-size-5 div.text {
+    height: 100%;
+    min-height: 680px;
+}
+
+@media (min-width: 1006px) {
+    .text-size-4 div.images {
+        height: 680px;
+    }
+
+    .text-size-5 div.images {
+        height: 680px;
+    }
+}
