--- a/css/disco.css
+++ b/css/disco.css
@@ -27,7 +27,6 @@ body {
     place-content: center; 
     max-width: 90vw; 
     margin: 0 auto;
-   
 }
 
 /* Album Item - Ensures Proper Scaling */
@@ -243,17 +242,23 @@ body {
 }
 
 
-
 @media (max-width: 500px) {
     .album-grid {
         grid-template-columns: 1fr; /* 1 per row */
         max-width: 95vw;
     }
 }
+
+@media (max-width: 1477px) {
+    .album-grid {
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));  /*Auto-adjusts */
+    }
+}
+
 /* Centering & Responsive Grid */
 .album-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Auto-adjusts */
+    /* grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); Auto-adjusts */
     gap: 20px;
     justify-content: center; /* Center items horizontally */
     place-items: center; /* Ensures centering in one column */
